--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".Upload"></activity>
-        <activity android:name=".SplashActivity">
+        <activity android:name=".SplashActivity"
+            android:theme="@style/noaction">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,9 +24,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".profile" />
-        <activity android:name=".Register" />
-        <activity android:name=".Login" />
-        <activity android:name=".Welcome">
+        <activity android:name=".Register"
+            android:theme="@style/noaction"/>
+        <activity android:name=".Login"
+            android:theme="@style/noaction"/>
+        <activity android:name=".Welcome"
+            android:theme="@style/noaction">
 
         </activity>
 
