--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".profile"
-            android:theme="@style/actionbar"/>
+        <activity android:name=".profile"/>
         <activity
             android:name=".Register"/>
         <activity
