--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,12 +61,9 @@
             android:screenOrientation="portrait"/>
 
         <activity android:name=".ui.Authorclass" >
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-            </intent-filter>
-            <meta-data android:name="android.app.searchable"
-                android:resource="@xml/search"/>
         </activity>
+
+        <activity android:name=".ProfileEdit"/>
 
         <meta-data
             android:name="preloaded_fonts"
