--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'de.hdodenhof:circleimageview:3.0.1'
     implementation 'com.miguelcatalan:materialsearchview:1.4.0'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
 
 }
