--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.1'
     implementation 'com.miguelcatalan:materialsearchview:1.4.0'
     implementation 'com.getbase:floatingactionbutton:1.10.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
+
 //    implementation 'com.google.firebase:firebase-database:19.2.0'
 }
