--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,10 @@ dependencies {
     implementation 'com.miguelcatalan:materialsearchview:1.4.0'
     implementation 'com.getbase:floatingactionbutton:1.10.1'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.android.support:design:29.1.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+    implementation 'com.itextpdf:itextg:5.5.10'
 
 //    implementation 'com.google.firebase:firebase-database:19.2.0'
 }
