--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,7 @@
-3`1#Sat Dec 07 12:26:10 IST 2019
+#Wed Mar 04 20:41:29 IST 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.4.1-all.zip
+3`1\#Sat=Dec 07 12\:26\:10 IST 2019
+distributionUrl=https\://services.gradle.org/distributions/gradle-5.6.4-all.zip
